<package>
  <name>rfid_sensor_layer</name>
  <description>
     Navigation Layer for RFID readers based on Range sensor navigation Layer from David V. Lu
  </description>
  <version>0.0.0</version>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <author>Manuel</author>

  <license>BSD</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rfid_node</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rfid_node</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
